@@ -1,5 +1,10 @@
 2015-06-10 Paulo Andrade <pcpa@gnu.org>
 
+	* lib/jit_ia64-cpu.c, lib/jit_ia64-fpu.c, lib/jit_ia64.c:
+	Add base support to jit vararg functions to the ia64 backend.
+
+2015-06-10 Paulo Andrade <pcpa@gnu.org>
+
 	* lib/jit_ia64-fpu.c, lib/jit_ia64.c: Correct movi_d_w
 	and movi_f_w implementation to work when not using a
 	data buffer. This causes the check varargs.tst to
